--- a/coin-top100/package.json
+++ b/coin-top100/package.json
@@ -18,6 +18,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
@@ -32,7 +33,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeploy" : "npm run build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
