--- a/coin-top100/package.json
+++ b/coin-top100/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@tanstack/react-query": "^4.12.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.12.0",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.24",
     "gh-pages": "^3.2.3"
